2017-01-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/Makefile.am: crc32-test.o: AM_CFLAGS += $(SSE42_CFLAGS)
	* common-src/amcrc32chw.c: Use __SSE4_2__, set compiled_with_sse4_2
	* common-src/amcrc32chw.h: Declare compiled_with_sse4_2
	* common-src/amutil.c: Use __SSE4_2__, check compiled_with_sse4_2
	* common-src/crc32-test.c: Use __SSE4_2__

2017-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Changer/robot.pm: Add 'use Carp;' in
	  Amanda::Changer::robot::Interface::MTX package

2017-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	Initial patch by Eric Schnoebelen <eric@cirr.com>
	* common-src/ammessage.c: Check bound on err_code array

2017-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Eric Schnoebelen <eric@cirr.com>
	* common-src/security-file.c: use of autoconf defined feature macro
	  instead of hardcoded path

2017-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Eric Schnoebelen <eric@cirr.com>
	* config/macro-archive/xsltproc.m4: Fix shell portability problem

2017-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Eric Schnoebelen <eric@cirr.com>
	* config/amanda/libs.m4: bash-ism's in the autoconf macros.  autoconf
	  should be written in POSIX sh

2017-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Eric Schnoebelen <eric@cirr.com>
	* common-src/glib-util.c: Make sure to use the feature test macro for
	  LIBCURL before trying to use either the GNUTLS or OPENSSL feature
	  test macros

2017-01-03  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Print warning if autolabel is set to the
	  "MATCH-AUTOLABEL" string

2016-12-30  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amcheck-device.pl: Fix printing error

2016-12-21  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Paths.pm.in: Add $libdir
	* common-src/amgetconf.pl: Add build.libdir and build.amlibdir
