@@ -1,4 +1,13 @@
 2017-01-04  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* config/amanda/flags.m4: Detect clang compiler
+	* common-src/ammessage.c: Fix warning found by clang compiler
+	* common-src/amutil.c: Fix warning found by clang compiler
+	* common-src/conffile.c: Fix warning found by clang compiler
+	* common-src/crc32-test.c: Fix warning found by clang compiler
+	* common-src/security-util.c: Fix warning found by clang compiler
+	* device-src/ndmp-device.c: Fix warning found by clang compiler
+
+2017-01-04  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* common-src/Makefile.am: crc32-test.o: AM_CFLAGS += $(SSE42_CFLAGS)
 	* common-src/amcrc32chw.c: Use __SSE4_2__, set compiled_with_sse4_2
 	* common-src/amcrc32chw.h: Declare compiled_with_sse4_2
